init some work on adding a Maven plugin to generate version tag etc...
Signed-off-by: Olivier Lamy <olamy@apache.org>